--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,8 +7,9 @@ body {
     margin: 0;
 }
 
-main {
-    padding: 36px;
+.navigation {
+    padding: 16px;
+    margin: 10px;
 }
 
 .header {
@@ -75,4 +76,23 @@ main {
 .changeButtons {
     margin-bottom: 10px;
     margin-top: 10px;
+}
+
+.buttonSelect {
+    margin-right: 10px;
+}
+
+.title {
+    text-align: center;
+    width: 100%;
+    padding: 2%;
+    background-color: #91d5ff;
+    color: #efefef;
+}
+
+.bottom {
+    position: fixed;
+    width: 100%;
+    left: 0;
+    bottom: 0;
 }
